Thu Sep 18 18:54:59 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/INET_Addr.{h,cpp}:
          Use bool and several doxygen changes

Thu Sep 18 10:30:00 UTC 2008  Simon Massey  <sma@prismtech.com>

        * bin/diff-builds-and-group-fixed-tests-only.sh:

          Provide no test revision grouping results as well.

Thu Sep 18 06:33:59 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_Time.{h,cpp,inl} (strptime):
          Always clear struct tm to zero

        * tests/OS_Test.cpp:
          Updated for change above

        * tests/Cached_Conn_Test.cpp:
          Removed check for deprecated compiler

Wed Sep 17 18:47:59 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Cached_Connect_Strategy_T.{h,cpp}:
          reuse_addr is a bool

Wed Sep 17 18:11:59 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/checked_iterator.h:
          Reverted change below for the moment, causes a lot of warnings in some
          builds.

        Tue Sep 16 12:48:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
        * ace/checked_iterator.h:
          Check for dinkum stl.  Thanks to Mark Hebbel
          <Mark dot Hebbel at baslerweb dot com> for reporting this. This
          fixes bugzilla 3420

Wed Sep 17 14:13:59 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_time.cpp (strptime_emulation):
          Don't set struct tm to zero

        * ace/OS_Test.cpp:
          Set struct tm to zero before calling strptime

Wed Sep 17 13:23:56 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/ETCL/ETCL_Constraint.cpp:

          Explicitly initialize base class in ETCL_Literal_Constraint copy
          constructor.

Wed Sep 17 12:24:59 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Network_Adapters_Test.cpp:
          Unicode fix

Wed Sep 17 12:19:59 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Thread_Manager.cpp: