@@ -20,12 +20,12 @@ AS_VAR_POPDEF([ac_var])dnl
 #-----------------------------------------------------------------------------
 AC_DEFUN([ACE_CHECK_HAS_DEFINES],
 [AC_FOREACH([ACE_Def], [$1],
-  [AH_TEMPLATE(AS_TR_CPP(ACE_HAS_[]ACE_Def),
+  [AH_TEMPLATE(AS_TR_CPP([ACE_HAS_]ACE_Def),
                [Define to 1 if platform has ]ACE_Def[().])])dnl
 for ace_def in $1
 do
 ACE_CHECK_DEFINE($ace_def,
-                 [AC_DEFINE_UNQUOTED([AS_TR_CPP([ACE_HAS_$ace_def])]) $2],
+                 [AC_DEFINE_UNQUOTED(AS_TR_CPP([ACE_HAS_$ace_def])) $2],
                  [$3],
                  [$4])dnl
 done
@@ -36,13 +36,13 @@ done
 #-----------------------------------------------------------------------------
 AC_DEFUN([ACE_CHECK_LACKS_DEFINES],
 [AC_FOREACH([ACE_Def], [$1],
-  [AH_TEMPLATE(AS_TR_CPP(ACE_LACKS_[]ACE_Def),
+  [AH_TEMPLATE(AS_TR_CPP([ACE_LACKS_]ACE_Def),
                [Define to 1 if platform lacks ]ACE_Def[().])])dnl
 for ace_def in $1
 do
 ACE_CHECK_DEFINE($ace_def,
                  [$2],
-                 [AC_DEFINE_UNQUOTED([AS_TR_CPP([ACE_LACKS_$ace_def])]) $3],
+                 [AC_DEFINE_UNQUOTED(AS_TR_CPP([ACE_LACKS_$ace_def])) $3],
                  [$4])dnl
 done
 ])
